# UrlShortener

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
shortener/: settings.py  urls.py
url_shortener/: models.py  serializers.py  tests.py  urls.py  views.py
url_shortener/migrations/: 0001_initial.py
